force-app/main/default/objects/custom_create10__c/custom_create10__c.object-meta.xml
<CustomObject>
    <label>Custom created object10</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects10</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>