force-app/main/default/objects/custom_create10__c/fields/custom_create_10field580__c.field-meta.xml
<CustomField>
    <fullName>custom_create_10field580__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 10field580</label>
    <type>Checkbox</type>
</CustomField>