force-app/main/default/objects/custom_create10__c/fields/custom_create_10field587__c.field-meta.xml
<CustomField>
    <fullName>custom_create_10field587__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 10field587</label>
    <type>Checkbox</type>
</CustomField>